--- a/pics.html
+++ b/pics.html
@@ -33,7 +33,7 @@
       <b>Cool title</h1><hr>
     </header> 
 
-    <p style="text-align: center;">enter some cool text here...</p><br>
+    <p style="text-align: center;">Hi its me! Mar1ellaellla... Download the app bellow to unlock my nude pictues/videos</p><br>
  
     </div>
 
