--- a/pics.html
+++ b/pics.html
@@ -30,7 +30,7 @@
     <div class="container">
     <header><br><br>
       <h1><img id="logo" src="//i.imgur.com/oaHkoeO.png" height="100" width="100"><br>
-      <b>Cool title</h1><hr>
+      <b>Welcome to my page!</h1><hr>
     </header> 
 
     <p style="text-align: center;">Hi its me! Mar1ellaellla... Download the app bellow to unlock my nude pictues/videos</p><br>
